--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <p class="badge text-bg-info"> C# </p>
     </div>
     
-    <main class="container d-flex justify-content-around">
-        <div class="card" style="width: 18rem;">
+    <main class="container d-flex flex-wrap justify-content-around">
+        <div class="card m-3" style="width: 18rem;">
             <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"> Tratamento de dados </h5>
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card m-3" style="width: 18rem;">
             <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"> Tratamento de dados </h5>
@@ -43,11 +43,39 @@
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card m-3" style="width: 18rem;">
             <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"> Tratamento de dados </h5>
               <p class="card-text">Projeto desenvolvido com a intenção de manipular dados e criar gráficos.</p>
+              <a href="#" class="btn btn-primary"> Saiba mais </a>
+            </div>
+        </div>
+
+        
+        <div class="card m-3" style="width: 18rem;">
+            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Novo Projeto 1 </h5>
+              <p class="card-text">Descrição do novo projeto 1.</p>
+              <a href="#" class="btn btn-primary"> Saiba mais </a>
+            </div>
+        </div>
+
+        <div class="card m-3" style="width: 18rem;">
+            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Novo Projeto 2 </h5>
+              <p class="card-text">Descrição do novo projeto 2.</p>
+              <a href="#" class="btn btn-primary"> Saiba mais </a>
+            </div>
+        </div>
+
+        <div class="card m-3" style="width: 18rem;">
+            <img src="https://via.placeholder.com/300x200" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"> Novo Projeto 3 </h5>
+              <p class="card-text">Descrição do novo projeto 3.</p>
               <a href="#" class="btn btn-primary"> Saiba mais </a>
             </div>
         </div>
