--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </div>
     </main>
 
-    <!-- Modais -->
+    
     <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modal1Label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -201,8 +201,8 @@
                     Um jogo de narrativa onde suas escolhas afetam o resultado da história. Desenvolvido com HTML e JavaScript, proporcionando uma experiência única a cada jogada.
                 </div>
                 <div class="modal-footer">
-                    <a href="https://link-do-seu-site.com" class="btn btn-primary" target="_blank">Visitar Site</a>
-                    <a href="https://github.com/seu-repositorio" class="btn btn-secondary" target="_blank">Ver no GitHub</a>
+                    <a href="https://cleitindaxj6.github.io/Voce-Decide-/" class="btn btn-primary" target="_blank">Visitar Site</a>
+                    <a href="https://github.com/cleitindaxj6/Voce-Decide-" class="btn btn-secondary" target="_blank">Ver no GitHub</a>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                 </div>
             </div>
@@ -221,8 +221,8 @@
                     Um simples jogo onde o jogador deve adivinhar um número secreto gerado aleatoriamente. Criado com HTML e JavaScript, é uma ótima maneira de praticar lógica e programação.
                 </div>
                 <div class="modal-footer">
-                    <a href="https://link-do-seu-site.com" class="btn btn-primary" target="_blank">Visitar Site</a>
-                    <a href="https://github.com/seu-repositorio" class="btn btn-secondary" target="_blank">Ver no GitHub</a>
+                    <a href="https://cleitindaxj6.github.io/Adivinhe-o-Numero-/" class="btn btn-primary" target="_blank">Visitar Site</a>
+                    <a href="https://github.com/cleitindaxj6/Adivinhe-o-Numero-" class="btn btn-secondary" target="_blank">Ver no GitHub</a>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                 </div>
             </div>
@@ -241,8 +241,8 @@
                     Um jogo culinário onde o usuário deve preparar pratos de forma rápida e eficiente. Utilizando HTML, CSS e JavaScript, traz uma dinâmica divertida ao aprendizado de programação.
                 </div>
                 <div class="modal-footer">
-                    <a href="https://link-do-seu-site.com" class="btn btn-primary" target="_blank">Visitar Site</a>
-                    <a href="https://github.com/seu-repositorio" class="btn btn-secondary" target="_blank">Ver no GitHub</a>
+                    <a href="https://cleitindaxj6.github.io/python/" class="btn btn-primary" target="_blank">Visitar Site</a>
+                    <a href="https://github.com/cleitindaxj6/python" class="btn btn-secondary" target="_blank">Ver no GitHub</a>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
                 </div>
             </div>
@@ -254,7 +254,7 @@
         <p>Entre em contato comigo através dos seguintes meios:</p>
         <ul class="list-unstyled">
             <li class="mb-2"><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:carloshenriquealvesdasilva82@gmail.com">carloshenriquealvesdasilva82@gmail.com</a></li>
-            <li class="mb-2"><i class="fas fa-phone"></i> <strong>Telefone:</strong> (11) 99999-9999</li>
+            <li class="mb-2"><i class="fas fa-phone"></i> <strong>Telefone:</strong> (45) 98324-3234</li>
             <li class="mb-2"><i class="fab fa-linkedin"></i> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/carloshenrique" target="_blank">linkedin.com/in/carloshenrique</a></li>
             <li><i class="fab fa-github"></i> <strong>GitHub:</strong> <a href="https://github.com/cleitindaxj6" target="_blank">github.com/carloshenrique</a></li>
         </ul>
